--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -550,7 +550,7 @@ dummy:
 # DOCKER #
 ##########
 #ceph_docker_image: "ceph/daemon"
-#ceph_docker_image_tag: latest
+#ceph_docker_image_tag: latest-octopus
 #ceph_docker_registry: docker.io
 #ceph_docker_registry_auth: false
 #ceph_docker_registry_username:
