--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -542,7 +542,7 @@ ceph_tcmalloc_max_total_thread_cache: 0
 # DOCKER #
 ##########
 ceph_docker_image: "ceph/daemon"
-ceph_docker_image_tag: latest
+ceph_docker_image_tag: latest-octopus
 ceph_docker_registry: docker.io
 ceph_docker_registry_auth: false
 #ceph_docker_registry_username:
