switch2containers: remove ceph packages
Once the migration to containers is done we can make the playbook remove
any ceph rpms if the user set `remove_pkg_post_container_migration` to
`true`

Closes: https://bugzilla.redhat.com/show_bug.cgi?id=1976986

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -107,6 +107,10 @@ dummy:
 #ceph_use_distro_backports: false # DEBIAN ONLY
 #ceph_directories_mode: "0755"
 
+## Container migration
+# set this variable to `true` when you want the playbook to remove any ceph RPM after the migration to container is complete.
+#remove_pkg_post_container_migration: false
+
 ###########
 # INSTALL #
 ###########
