--- a/group_vars/rhcs.yml.sample
+++ b/group_vars/rhcs.yml.sample
@@ -107,6 +107,10 @@ dummy:
 #ceph_use_distro_backports: false # DEBIAN ONLY
 #ceph_directories_mode: "0755"
 
+## Container migration
+# set this variable to `true` when you want the playbook to remove any ceph RPM after the migration to container is complete.
+#remove_pkg_post_container_migration: false
+
 ###########
 # INSTALL #
 ###########
