--- a/infrastructure-playbooks/purge-cluster.yml
+++ b/infrastructure-playbooks/purge-cluster.yml
@@ -379,6 +379,23 @@
       shell: "sync && sleep 1 && echo 3 > /proc/sys/vm/drop_caches"
       changed_when: false
 
+    - name: see if ceph-volume is installed # noqa : 305
+      shell: command -v ceph-volume
+      changed_when: false
+      failed_when: false
+      register: ceph_volume_present
+
+    - name: zap and destroy osds by osd ids
+      ceph_volume:
+        osd_id: "{{ item | int }}"
+        action: "zap"
+      environment:
+        CEPH_VOLUME_DEBUG: "{{ ceph_volume_debug }}"
+      with_items: "{{ osd_ids.stdout_lines }}"
+      when:
+        - osd_auto_discovery | bool
+        - ceph_volume_present.rc == 0
+
     - name: umount osd data partition
       mount:
         path: "{{ item }}"
@@ -448,12 +465,6 @@
       changed_when: false
       failed_when: false
       register: ceph_lockbox_partition_to_erase_path
-
-    - name: see if ceph-volume is installed # noqa : 305
-      shell: command -v ceph-volume
-      changed_when: false
-      failed_when: false
-      register: ceph_volume_present
 
     - name: zap and destroy osds created by ceph-volume with lvm_volumes
       ceph_volume:
